# alapvizsga-utils

./: .gitignore  LICENSE  README.md  pyproject.toml  utils.py
src/alapvizsga_utils/: __init__.py  alapvizsga_utils.py
src/utils/: utils.py
utils/: utils.py
