
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alapvizsga_utils"]

[project]
name = "alapvizsga_utils"
version = "0.4"
authors = [
  { name="Akos K.", email="akosjdlk.60@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/akosjdlk-60/alapvizsga-utils"